--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
     <!-- Google tag (gtag.js) -->
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-3HFJ3RLN74"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -20,4 +21,5 @@
 </body>
 
 </html>
+
 
