--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
         <!-- Google tag (gtag.js) -->
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3HFJ3RLN74"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-95ZDETNZ15"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -20,6 +20,7 @@
 </body>
 
 </html>
+
 
 
 
